# FiguraSDK

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: CMakeLists.txt  example.cpp
examples/assets/wolf skull/: czaszka_wilka.mtl
include/Figura/: Figura.h  camera.h  indexbuffer.h  light.h  mesh.h  model.h  shader.h  texture.h  vertexbuffer.h
include/glad/: glad.h
lib/: CMakeLists.txt
source/: camera.cpp  glad.c  indexbuffer.cpp  light.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  vertexbuffer.cpp
